2000-08-23  Jiang Wu  <jwu@cs.stanford.edu>

	* src/tclblend/tcl/lang/Notifier.java (preserve, release,
	queueEvent, deleteEvents, deleteEvent, serviceEvent,
	getAvailableEvent, hasEvents): Fix bugs in Notifier,
	use an internal monitor instead of one on the class
	so that an event that calls vwait does not block
	other events from getting added to the after queue.

2000-08-23  Mo DeJong  <mdejong@redhat.com>

	* src/tests/tcljava/tests/AppendEventQueueThread.java: Add source
	for enqueue of event that does a vwait test.
	* tests/tcljava/TclEvent.test: Add test case for notifier
	queue bug.

2000-08-23  Mo DeJong  <mdejong@redhat.com>

	* configure: Regen.
	* tcljava.m4: Reject Tcl build that does not
	include thread support.

2000-08-19  Mo DeJong  <mdejong@redhat.com>

	* Makefile.in: Renamed TCLBLEND_CLASS_NAMES variable
	to TCLBLEND_JNI_HEADER_CLASS_NAMES.

2000-08-08  Mo DeJong  <mdejong@redhat.com>

	* src/native/java.h (JavaGetEnv):
	* src/native/javaCmd.c (JavaGetEnv, JavaInitEnv):
	Rewrite Tcl Blend initilization, create new method
	to handle all initialization in a thread safe way.
	* src/native/javaIdle.c:
	* src/native/javaInterp.c:
	* src/native/javaNotifier.c:
	* src/native/javaObj.c:
	* src/native/javaTimer.c: Call JavaGetEnv without
	an Interp argument.

2000-08-07  Mo DeJong  <mdejong@redhat.com>

	* src/native/javaCmd.c (JavaGetEnv): Rewrite
	JavaGetEnv, it was implemented as two methods
	that did the exact same thing for two different
	versions of the JDK. It is now a single method.

2000-08-06  Mo DeJong  <mdejong@redhat.com>

	* src/native/java.h:
	* src/native/javaCmd.c:
	* src/native/javaInterp.c:
	* src/tclblend/tcl/lang/NativeLock.java: Remove
	the tcl.lang.NativeLock class, it is not needed
	since we removed the big global lock.

2000-07-30  Mo DeJong  <mdejong@redhat.com>

	* src/native/java.h:
	* src/native/javaCmd.c:
	* src/native/javaIdle.c:
	* src/native/javaInterp.c:
	* src/native/javaList.c:
	* src/native/javaNotifier.c: